# PluginSDK_Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Setup.py
src/: CMakeLists.txt  Plugin.cpp  Plugin.hpp  PluginInterface.cpp  Singleton.hpp  version.hpp.in
